tests/invalid/NegationType_Invalid_4.whiley
type t is method(any)->()
public export method test(any x):
    !t m = &test
